- added lots of functionality.  All is untested.  Compiles

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,4 +9,8 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(app LANGUAGES C)
 
-target_sources(app PRIVATE src/main.c)
+# Add source files
+target_sources(app PRIVATE src/main.c src/gpio_control.c src/scpi_commands.c src/tcp_server.c)
+
+# Include directories
+target_include_directories(app PRIVATE include)
