--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,7 +1,10 @@
-# Copyright (c) 2021 Nordic Semiconductor ASA
-# SPDX-License-Identifier: Apache-2.0
-#
-# This file contains selected Kconfig options for the application.
-
-CONFIG_SENSOR=y
-CONFIG_BLINK=y
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=y
+CONFIG_NET_TCP=y
+CONFIG_NET_UDP=y
+CONFIG_NET_DHCPV4=y
+CONFIG_NET_DHCPV6=y
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_L2_ETHERNET=y
+CONFIG_ETH_STM32_HAL=y
