--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,10 +1,26 @@
+# General config
+CONFIG_MAIN_STACK_SIZE=4096
+
+# Networking config
 CONFIG_NETWORKING=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=y
 CONFIG_NET_TCP=y
 CONFIG_NET_UDP=y
-CONFIG_NET_DHCPV4=y
-CONFIG_NET_DHCPV6=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_IPV4_MAPPING_TO_IPV6=y
+
+# Enable Ethernet support
 CONFIG_NET_L2_ETHERNET=y
 CONFIG_ETH_STM32_HAL=y
+
+# Network address config
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_NEED_IPV4=y
+CONFIG_NET_CONFIG_NEED_IPV6=y
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="10.0.1.100"
+CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::a00:164"
+
+# Disable DHCP (optional)
+CONFIG_NET_DHCPV4=n
+CONFIG_NET_DHCPV6=n
