- HTTP server wokrs independently of the tcp_server

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(app LANGUAGES C)
 
 # Add source files
-target_sources(app PRIVATE src/main.c src/gpio_control.c src/scpi_commands.c src/tcp_server.c)
+target_sources(app PRIVATE src/main.c src/gpio_control.c src/scpi_commands.c src/tcp_server.c src/http_server.c)
 
 # Include directories
 target_include_directories(app PRIVATE include)
