--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,5 +1,8 @@
 # General config
 CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+CONFIG_LOG=y
+CONFIG_INIT_STACKS=y
 
 # Networking config
 CONFIG_NETWORKING=y
@@ -13,6 +16,8 @@ CONFIG_NET_IPV4_MAPPING_TO_IPV6=y
 # Enable Ethernet support
 CONFIG_NET_L2_ETHERNET=y
 CONFIG_ETH_STM32_HAL=y
+CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=3
+CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=4
 
 # Network address config
 CONFIG_NET_CONFIG_SETTINGS=y
@@ -24,3 +29,14 @@ CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::a00:164"
 # Disable DHCP (optional)
 CONFIG_NET_DHCPV4=n
 CONFIG_NET_DHCPV6=n
+
+# Enable HTTP server
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_TCP=y
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_ENABLE_DTLS=n
+CONFIG_HTTP_PARSER=y
+CONFIG_HTTP_PARSER_URL=y
+CONFIG_THREAD_STACK_INFO=y
+CONFIG_INIT_STACKS=y
