--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,6 +3,14 @@ CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 CONFIG_LOG=y
 CONFIG_INIT_STACKS=y
+CONFIG_ZVFS_OPEN_MAX=32
+CONFIG_POSIX_API=y
+CONFIG_FDTABLE=y
+CONFIG_ZVFS_POLL_MAX=32
+CONFIG_POSIX_TIMERS=y
+
+# Eventfd
+CONFIG_EVENTFD=y
 
 # Networking config
 CONFIG_NETWORKING=y
@@ -40,3 +48,17 @@ CONFIG_HTTP_PARSER=y
 CONFIG_HTTP_PARSER_URL=y
 CONFIG_THREAD_STACK_INFO=y
 CONFIG_INIT_STACKS=y
+
+CONFIG_HTTP_PARSER=y
+CONFIG_HTTP_PARSER_URL=y
+CONFIG_HTTP_SERVER=y
+CONFIG_HTTP_SERVER_STACK_SIZE=3072
+CONFIG_HTTP_SERVER_NUM_SERVICES=1
+CONFIG_HTTP_SERVER_MAX_CLIENTS=3
+CONFIG_HTTP_SERVER_MAX_STREAMS=10
+CONFIG_HTTP_SERVER_CLIENT_BUFFER_SIZE=256
+CONFIG_HTTP_SERVER_HUFFMAN_DECODE_BUFFER_SIZE=256
+CONFIG_HTTP_SERVER_MAX_URL_LENGTH=256
+CONFIG_HTTP_SERVER_MAX_CONTENT_TYPE_LENGTH=64
+CONFIG_HTTP_SERVER_MAX_HEADER_LEN=32
+CONFIG_HTTP_SERVER_HTTP2_MAX_HEADER_FRAME_LEN=64
