--- a/app/prj.conf
+++ b/app/prj.conf
@@ -62,3 +62,5 @@ CONFIG_HTTP_SERVER_MAX_URL_LENGTH=256
 CONFIG_HTTP_SERVER_MAX_CONTENT_TYPE_LENGTH=64
 CONFIG_HTTP_SERVER_MAX_HEADER_LEN=32
 CONFIG_HTTP_SERVER_HTTP2_MAX_HEADER_FRAME_LEN=64
+# Enable JSON library
+CONFIG_JSON_LIBRARY=y
