- adding gpio support

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -64,3 +64,5 @@ CONFIG_HTTP_SERVER_MAX_HEADER_LEN=32
 CONFIG_HTTP_SERVER_HTTP2_MAX_HEADER_FRAME_LEN=64
 # Enable JSON library
 CONFIG_JSON_LIBRARY=y
+
+CONFIG_GPIO=y
