--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Setup pages
         if: github.event_name != 'pull_request'
         uses: actions/configure-pages@v4
+        with:
+          enablement: true
 
       - name: Upload pages artifact
         if: github.event_name != 'pull_request'
